crates/turborepo/tests/snapshots/no_args_test__composable_config_run_no_tasks.snap
---
source: crates/turborepo/tests/no_args_test.rs
expression: stdout.to_string()
---
No tasks provided, here are some potential ones

  add-keys-task
    add-keys
  add-keys-underlying-task
    add-keys
  added-task
    add-tasks
  build
    invalid-config
  cached-task-1
    cached
  cached-task-2
    cached
  cached-task-3
    cached
  cached-task-4
    missing-workspace-config
  config-change-task
    config-change
  cross-workspace-task
    cross-workspace
  cross-workspace-underlying-task
    blank-pkg
  missing-workspace-config-task
    missing-workspace-config
  missing-workspace-config-task-with-deps
    missing-workspace-config
  missing-workspace-config-underlying-task
    missing-workspace-config
  missing-workspace-config-underlying-topo-task
    blank-pkg
  omit-keys-task
    omit-keys
  omit-keys-task-with-deps
    omit-keys
  omit-keys-underlying-task
    omit-keys
  omit-keys-underlying-topo-task
    blank-pkg
  override-values-task
    override-values
  override-values-task-with-deps
    override-values
  override-values-task-with-deps-2
    override-values
  override-values-underlying-task
    override-values
  override-values-underlying-topo-task
    blank-pkg
  persistent-task-1
    persistent
  persistent-task-1-parent
    persistent
  persistent-task-2
    persistent
  persistent-task-2-parent
    persistent
  persistent-task-3
    persistent
  persistent-task-3-parent
    persistent
  persistent-task-4
    persistent
  persistent-task-4-parent
    persistent
  trailing-comma
    bad-json
