crates/turborepo/tests/snapshots/no_args_test__run_no_tasks_filtered.snap
---
source: crates/turborepo/tests/no_args_test.rs
expression: stdout.to_string()
---
No tasks provided, here are some potential ones

  build
    my-app
  maybefails
    my-app
